// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Input disabled 1`] = `
<label
  class="input is-disabled"
  data-testid="input"
>
  <input
    class="input--inner"
    data-testid="input-inner"
    disabled=""
    type="text"
  />
</label>
`;

exports[`Test Input has help text 1`] = `
<label
  class="input"
  data-testid="input"
>
  <input
    class="input--inner"
    data-testid="input-inner"
    type="text"
  />
  <span
    class="input--help"
  >
    Help text
  </span>
</label>
`;

exports[`Test Input has label 1`] = `
<label
  class="input"
  data-testid="input"
>
  <span
    class="input--label"
  >
    Label
  </span>
  <input
    class="input--inner"
    data-testid="input-inner"
    type="text"
  />
</label>
`;

exports[`Test Input onChange 1`] = `
<label
  class="input"
  data-testid="input"
>
  <input
    class="input--inner"
    data-testid="input-inner"
    type="text"
  />
</label>
`;

exports[`Test Input readOnly 1`] = `
<label
  class="input"
  data-testid="input"
>
  <input
    class="input--inner"
    data-testid="input-inner"
    readonly=""
    type="text"
  />
</label>
`;

exports[`Test Input without attr 1`] = `
<label
  class="input"
  data-testid="input"
>
  <input
    class="input--inner"
    data-testid="input-inner"
    type="text"
  />
</label>
`;
